--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
-    "electron": "^31.1.0"
+    "electron": "^31.1.0",
+    "googleapis": "^140.0.1"
   }
 }
